fix search icon on mobile

--- a/src/app/page/search-page/search-page/search-page.component.scss
+++ b/src/app/page/search-page/search-page/search-page.component.scss
@@ -28,8 +28,6 @@
       width: 100%;
       border: 2px solid var(--theme-color);
       padding-left: 36px;
-      padding-bottom: 1px;
-      padding-top: 1.5px;
       font-size: var(--body-font-size);
       height: 40px;
     }
@@ -38,7 +36,7 @@
       color: var(--theme-color);
       position: absolute;
       margin-left: 10px;
-      margin-top: 0.55vh;
+      margin-top: 7px;
       font-size: var(--icon-font-size);
     }
   }
@@ -82,6 +80,12 @@
       width: 100%;
       .search-box {
         width: 90%;
+        font-size: var(--small-font-size);
+        padding-left: 32px;
+      }
+      .search-icon {
+        margin-top: 9px;
+        font-size: var(--small-icon-font-size);
       }
     }
 
