--- a/src/theme/design/gitlift.design.theme.scss
+++ b/src/theme/design/gitlift.design.theme.scss
@@ -4,4 +4,6 @@
   --sub-header-font-size: 19px;
   --body-font-size: 16px;
   --icon-font-size: 20px;
+  --small-icon-font-size: 17px;
+  --small-font-size: 14px;
 }
